# Yampa

./: .gitignore  .travis.yml  CHANGELOG  HLint.hs  README.md  Yampa.cabal  cabal.project  stack.yaml
.github/: FUNDING.yml
doc/diagrams/: Diagrams.md
doc/hcar/: .gitignore  Makefile  Yampa-IY.tex  Yampa.tex  hcar.sty  report.tex  template.tex
examples/: Core.hs  Diagrams.hs  Old.hs  Testing.hs  testing.hs
examples/Elevator/: Elevator.hs  TestElevatorMain.hs
examples/TailgatingDetector/: TailgatingDetector.hs  TestTGMain.hs
examples/testing/: ChangeLog.md  yampa-testing.cabal
examples/testing/src/: Testing.hs
examples/testing/src/FRP/Yampa/: Debug.hs  LTLFuture.hs  LTLPast.hs  QuickCheck.hs  Stream.hs
examples/testing/tests/: YampaQC.hs
examples/yampa-game/: IdentityList.hs  MainBouncingBox.hs  MainCircleMouse.hs  MainPaddleWiimote.hs  MainWiimote.hs  YampaSDL.hs
examples/yampa-game/FRP/Yampa/: Physics.hs
extensions/testing/: CHANGELOG  LICENSE  yampa-test.cabal  yampa-testing.cabal
extensions/testing/src/FRP/Yampa/: Debug.hs  LTLFuture.hs  LTLPast.hs  QuickCheck.hs  Stream.hs
extensions/testing/tests/: YampaQC.hs
src/FRP/: Yampa.hs
src/FRP/Yampa/: AffineSpace.hs  Arrow.hs  Basic.hs  Conditional.hs  Core.hs  Delays.hs  Diagnostics.hs  Event.hs  EventS.hs  Forceable.hs  Geometry.hs  Hybrid.hs  Integration.hs  InternalCore.hs  Internals.hs  Loop.hs  MergeableRecord.hs  Miscellany.hs  Point2.hs  Point3.hs  Random.hs  Scan.hs  Simulation.hs  Stream.hs  Switches.hs  Task.hs  Testing.hs  Time.hs  Utilities.hs  Vector2.hs  Vector3.hs  VectorSpace.hs
tests/: AFRPTests.hs  AFRPTestsAccum.hs  AFRPTestsArr.hs  AFRPTestsBasicSF.hs  AFRPTestsCOC.hs  AFRPTestsCommon.hs  AFRPTestsComp.hs  AFRPTestsDelay.hs  AFRPTestsDer.hs  AFRPTestsEmbed.hs  AFRPTestsEvSrc.hs  AFRPTestsFirstSecond.hs  AFRPTestsKSwitch.hs  AFRPTestsLaws.hs  AFRPTestsLoop.hs  AFRPTestsLoopIntegral.hs  AFRPTestsLoopLaws.hs  AFRPTestsLoopPre.hs  AFRPTestsPSwitch.hs  AFRPTestsPre.hs  AFRPTestsRPSwitch.hs  AFRPTestsRSwitch.hs  AFRPTestsReact.hs  AFRPTestsSscan.hs  AFRPTestsSwitch.hs  AFRPTestsTask.hs  AFRPTestsUtils.hs  AFRPTestsWFG.hs  HaddockCoverage.hs  SampleStreams.hs  SampleStreamsQC.hs  Talk.hs  TemporalLogic.hs  TemporalLogicYampa.hs  YampaQC.hs  hlint.hs  testAFRPMain.hs
yampa/: CHANGELOG  LICENSE  README.md  Yampa.cabal  betterIntegralTest.hs  default.nix  shell.nix  stack.yaml
yampa-test/: CHANGELOG  LICENSE  shell.nix  yampa-test.cabal
yampa-test/examples/: Testing.hs
yampa-test/src/FRP/Yampa/: Debug.hs  LTLFuture.hs  LTLPast.hs  QuickCheck.hs  Stream.hs
yampa-test/tests/: Main.hs  Space.hs  TestSpaceAccum.hs  TestSpaceArr.hs  TestSpaceLoop.hs  TestSpacePSwitch.hs  TestSpaceRPSwitch.hs  TestSpaceRSwitch.hs  Tests.hs  TestsAccum.hs  TestsArr.hs  TestsBasicSF.hs  TestsCOC.hs  TestsCommon.hs  TestsComp.hs  TestsDelay.hs  TestsDer.hs  TestsEmbed.hs  TestsEvSrc.hs  TestsFirstSecond.hs  TestsKSwitch.hs  TestsLaws.hs  TestsLoop.hs  TestsLoopIntegral.hs  TestsLoopLaws.hs  TestsLoopPre.hs  TestsPSwitch.hs  TestsPre.hs  TestsRPSwitch.hs  TestsRSwitch.hs  TestsReact.hs  TestsSscan.hs  TestsSwitch.hs  TestsTask.hs  TestsUtils.hs  TestsWFG.hs  YampaQC.hs  testSpace.hs  testYampaMain.hs
yampa-test/tests/Test/FRP/Yampa/: Arrow.hs  Basic.hs  Conditional.hs  Delays.hs  Event.hs  EventS.hs  Hybrid.hs  Integration.hs  InternalCore.hs  Loop.hs  Random.hs  Scan.hs  Simulation.hs  Switches.hs  Task.hs  Time.hs
yampa/benchmarks/: Bench.hs
yampa/examples/: Core.hs  Diagrams.hs  Rev.hs  Testing.hs
yampa/examples/Elevator/: Elevator.hs  TestElevatorMain.hs
yampa/examples/TailgatingDetector/: TailgatingDetector.hs  TestTGMain.hs
yampa/examples/yampa-game/: IdentityList.hs  MainBouncingBox.hs  MainCircleMouse.hs  MainWiimote.hs  YampaSDL.hs
yampa/src/FRP/: Yampa.hs
yampa/src/FRP/Yampa/: Arrow.hs  Basic.hs  Conditional.hs  Delays.hs  Diagnostics.hs  Event.hs  EventS.hs  Hybrid.hs  Integration.hs  InternalCore.hs  Loop.hs  Random.hs  Scan.hs  Signal.hs  Simulation.hs  Switches.hs  Task.hs  Time.hs
yampa/tests/: AFRPTestsAccum.hs  AFRPTestsArr.hs  AFRPTestsBasicSF.hs  AFRPTestsComp.hs  AFRPTestsKSwitch.hs  AFRPTestsRSwitch.hs  AFRPTestsSscan.hs  AFRPTestsTask.hs  AFRPTestsWFG.hs  HaddockCoverage.hs  TestsArr.hs  TestsBasicSF.hs  TestsCOC.hs  TestsCommon.hs  TestsDer.hs  TestsEmbed.hs  TestsLoop.hs  TestsLoopIntegral.hs  TestsLoopPre.hs  TestsPre.hs  TestsTask.hs  TestsWFG.hs  hlint.hs  testAFRPMain.hs
