name: Yampa
version: 0.10.1.1
cabal-version: >= 1.8
license: BSD3
license-file: LICENSE
author: Henrik Nilsson, Antony Courtney
maintainer: Ivan Perez (ivan.perez@keera.co.uk)
homepage: http://www.haskell.org/haskellwiki/Yampa
category: Reactivity, FRP
synopsis: Library for programming hybrid systems.

description:  Domain-specific language embedded in Haskell for programming
              hybrid (mixed discrete-time and continuous-time) systems. Yampa is based on
              the concepts of Functional Reactive Programming (FRP) and is structured using
              arrow combinators.

build-type: Simple
extra-source-files:
  tests/AFRPTests.hs,         tests/AFRPTestsCommon.hs,        tests/AFRPTestsArr.hs,
  tests/AFRPTestsComp.hs,     tests/AFRPTestsFirstSecond.hs,   tests/AFRPTestsLaws.hs,
  tests/AFRPTestsLoop.hs,     tests/AFRPTestsLoopLaws.hs,      tests/AFRPTestsBasicSF.hs,
  tests/AFRPTestsSscan.hs,    tests/AFRPTestsEvSrc.hs,         tests/AFRPTestsCOC.hs,
  tests/AFRPTestsSwitch.hs,   tests/AFRPTestsKSwitch.hs,       tests/AFRPTestsRSwitch.hs,
  tests/AFRPTestsPSwitch.hs,  tests/AFRPTestsRPSwitch.hs,      tests/AFRPTestsWFG.hs,
  tests/AFRPTestsAccum.hs,    tests/AFRPTestsPre.hs,           tests/AFRPTestsDelay.hs,
  tests/AFRPTestsDer.hs,      tests/AFRPTestsLoopPre.hs,       tests/AFRPTestsLoopIntegral.hs,
  tests/AFRPTestsReact.hs,    tests/AFRPTestsEmbed.hs,         tests/AFRPTestsUtils.hs,
  tests/AFRPTestsTask.hs,     tests/testAFRPMain.hs,

  examples/Elevator/Elevator.hs,
  examples/Elevator/TestElevatorMain.hs,
  examples/TailgatingDetector/TailgatingDetector.hs,
  examples/TailgatingDetector/TestTGMain.hs,

  CHANGELOG


-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual: True

library
  hs-source-dirs:  src
  ghc-options : -O3 -Wall -fno-warn-name-shadowing
  build-Depends: base < 5, random
  exposed-modules:
    -- Main FRP modules
    FRP.Yampa
    FRP.Yampa.Event
    FRP.Yampa.Internals
    FRP.Yampa.Task

    -- FRP Core (minimal complete definition)
    FRP.Yampa.Core

    -- Auxiliary (commonly used) types
    FRP.Yampa.AffineSpace
    FRP.Yampa.Geometry
    FRP.Yampa.Point2
    FRP.Yampa.Point3
    FRP.Yampa.Vector2
    FRP.Yampa.Vector3
    FRP.Yampa.VectorSpace

    -- Auxiliary definitions
    FRP.Yampa.Forceable
    FRP.Yampa.MergeableRecord
    FRP.Yampa.Miscellany
    FRP.Yampa.Utilities
    FRP.Yampa.Basic
    FRP.Yampa.Conditional
    FRP.Yampa.Delays
    FRP.Yampa.Diagnostics
    FRP.Yampa.EventS
    FRP.Yampa.Hybrid
    FRP.Yampa.Integration
    FRP.Yampa.Loop
    FRP.Yampa.Random
    FRP.Yampa.Scan
    FRP.Yampa.Simulation
    FRP.Yampa.Switches
    FRP.Yampa.Time

  other-modules:
    FRP.Yampa.InternalCore

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  hs-source-dirs: tests
  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
      base,
      hlint >= 1.7

source-repository head
  type:     git
  location: git://github.com/ivanperez-keera/Yampa.git
