-- Copyright (c) 2017, Ivan Perez
--
-- All rights reserved.
--
-- Redistribution and use in source and binary forms, with or without
-- modification, are permitted provided that the following conditions are met:
--
--     * Redistributions of source code must retain the above copyright notice,
--       this list of conditions and the following disclaimer.
--
--     * Redistributions in binary form must reproduce the above copyright
--       notice, this list of conditions and the following disclaimer in the
--       documentation and/or other materials provided with the distribution.
--
--     * Neither the name of Ivan Perez nor the names of other contributors may
--       be used to endorse or promote products derived from this software
--       without specific prior written permission.
--
-- THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
-- AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
-- IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
-- ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
-- LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
-- CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
-- SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
-- INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
-- CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
-- ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
-- POSSIBILITY OF SUCH DAMAGE.
cabal-version: >= 1.10
build-type:    Simple

name:          yampa-test
version:       0.14.11
author:        Ivan Perez
maintainer:    ivan.perez@keera.co.uk
homepage:      http://github.com/ivanperez-keera/Yampa
license:       BSD3
license-file:  LICENSE
-- copyright
category:      Testing
synopsis:      Testing library for Yampa.
description:
  Testing and debugging library for Yampa.
  .
  It contains:
  .
  * Debugging signal functions using
    <https://hackage.haskell.org/package/base/docs/Debug-Trace.html Debug.Trace>.
  * A definition of Temporal Predicates based on LTL.
  * Monitoring signal functions with ptLTL using Signal Predicates.
  * A definition of Streams, and a Stream manipulation API.
  * Signal/stream generators for QuickCheck.
  .
  A detailed explanation of these ideas is included in the ICFP 2017 paper
  <https://dl.acm.org/citation.cfm?id=3110246 Testing and Debugging Functional Reactive Programming>.

extra-source-files:
    CHANGELOG
  , examples/Testing.hs

source-repository head
  type:     git
  location: git://github.com/ivanperez-keera/Yampa.git
  subdir:   yampa-test


-- You can disable the regression test suite with -f-test-regression
flag test-space
  description: Enable space usage test suite
  default:     False
  manual:      True


library
  exposed-modules:
    FRP.Yampa.Debug
    FRP.Yampa.LTLFuture
    FRP.Yampa.LTLPast
    FRP.Yampa.QuickCheck
    FRP.Yampa.Stream

  build-depends:
      base               >= 4       && < 5
    , normaldistribution >= 1.1.0.1 && < 1.2
    , QuickCheck         >= 2.12    && < 2.16
    , Yampa              >= 0.14.11 && < 0.15

  default-language:
    Haskell2010

  hs-source-dirs:
    src


test-suite yampa-quicheck
  type:
    exitcode-stdio-1.0

  main-is:
    Main.hs

  other-modules:
    Test.FRP.Yampa.Arrow
    Test.FRP.Yampa.Basic
    Test.FRP.Yampa.Conditional
    Test.FRP.Yampa.Delays
    Test.FRP.Yampa.Event
    Test.FRP.Yampa.EventS
    Test.FRP.Yampa.Hybrid
    Test.FRP.Yampa.Integration
    Test.FRP.Yampa.InternalCore
    Test.FRP.Yampa.Loop
    Test.FRP.Yampa.Random
    Test.FRP.Yampa.Scan
    Test.FRP.Yampa.Simulation
    Test.FRP.Yampa.Switches
    Test.FRP.Yampa.Task
    Test.FRP.Yampa.Time
    TestsCommon

  build-depends:
      base             < 5
    , Cabal            >= 1.19 && < 3.9
    , QuickCheck       >= 2.12 && < 2.16
    , random           >= 1.1  && < 1.3
    , tasty            >= 0.1  && < 1.6
    , tasty-quickcheck >= 0.1  && < 0.12
    , Yampa
    , yampa-test

  default-language:
    Haskell2010

  hs-source-dirs:
    tests

  ghc-options:
    -Wall


test-suite space
  type:
    exitcode-stdio-1.0

  main-is:
    Space.hs

  other-modules:
    TestsCommon

  default-language:
    Haskell2010

  hs-source-dirs:
    tests

  ghc-options:
    -Wall

  if !flag(test-space)
    buildable:
      False
  else
    build-depends:
        base
      , Yampa
